--- a/discord_twitter_webhooks/templates/search.html
+++ b/discord_twitter_webhooks/templates/search.html
@@ -1,6 +1,11 @@
-{% extends "base.html" %} {% block title %} | Search {% endblock title %} {%
+{% extends "base.html" %}
+{% block title %}
+  | Search
+{% endblock title %}
+{%
 block content %}
 <div class="p-2 border border-dark text-muted">
   Your search for "{{- query -}}" returned {{ search_amount.total }} results.
 </div>
-{{- search_html | safe -}} {% endblock content %}
+{{- search_html | safe -}}
+{% endblock content %}
