--- a/discord_twitter_webhooks/templates/add/1_feed_details.html
+++ b/discord_twitter_webhooks/templates/add/1_feed_details.html
@@ -1,4 +1,4 @@
-<div class="p-2 border border-dark">
+<div class="p-2 border border-dark" id="feed_details">
   <h3>Feed Details</h3>
   {# Group name #}
   <div class="row pb-2">
