--- a/discord_twitter_webhooks/templates/add/2_what_to_send.html
+++ b/discord_twitter_webhooks/templates/add/2_what_to_send.html
@@ -1,4 +1,4 @@
-<div class="p-2 border border-dark">
+<div class="p-2 border border-dark" id="what_to_send">
   <h3>What to send</h3>
   {# Include retweets? #}
   <div class="form-check form-switch">
