--- a/discord_twitter_webhooks/templates/add/3_how_to_send.html
+++ b/discord_twitter_webhooks/templates/add/3_how_to_send.html
@@ -1,4 +1,4 @@
-<div class="p-2 border border-dark">
+<div class="p-2 border border-dark" id="how_to_send">
   <h3>How to send</h3>
   {# Send embed or text? #} {# Send embed #}
   <div class="form-check">
