--- a/discord_twitter_webhooks/templates/add/4_embed_settings.html
+++ b/discord_twitter_webhooks/templates/add/4_embed_settings.html
@@ -1,4 +1,4 @@
-<div class="p-2 border border-dark">
+<div class="p-2 border border-dark" id="embed_settings">
   <h3>Embed Settings</h3>
   {# Embed color #}
   <label for="embed_color" class="form-label">Embed Color</label>
