--- a/discord_twitter_webhooks/templates/add/5_send_link.html
+++ b/discord_twitter_webhooks/templates/add/5_send_link.html
@@ -1,4 +1,4 @@
-<div class="p-2 border border-dark">
+<div class="p-2 border border-dark" id="link_settings">
   <h3>Send link settings</h3>
   {# Send link preview #}
   <div class="form-check form-switch">
