--- a/discord_twitter_webhooks/templates/add/7_blackwhitelist.html
+++ b/discord_twitter_webhooks/templates/add/7_blackwhitelist.html
@@ -1,4 +1,4 @@
-<div class="p-2 border border-dark">
+<div class="p-2 border border-dark" id="blackwhitelist_settings">
   <h3>Whitelist</h3>
   {# Whitelist active #}
   <div class="form-check form-switch">
