--- a/discord_twitter_webhooks/templates/add/8_other.html
+++ b/discord_twitter_webhooks/templates/add/8_other.html
@@ -1,4 +1,4 @@
-<div class="p-2 border border-dark">
+<div class="p-2 border border-dark" id="other_settings">">
   <h3>Other</h3>
   {# Upload media to Discord #}
   <div class="form-check form-switch">
