--- a/discord_twitter_webhooks/templates/add/6_translate.html
+++ b/discord_twitter_webhooks/templates/add/6_translate.html
@@ -1,4 +1,4 @@
-<div class="p-2 border border-dark">
+<div class="p-2 border border-dark" id="translate_settings">
   <h3>Translate</h3>
   {# Should we translate the message? #}
   <div class="form-check form-switch">
