--- a/discord_twitter_webhooks/templates/base.html
+++ b/discord_twitter_webhooks/templates/base.html
@@ -12,6 +12,8 @@
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
           crossorigin="anonymous" />
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet" />
+    <link rel="icon" href="{{ url_for('static', path='/favicon.svg') }}" />
+
     <title>
       discord-twitter-webhooks
       {% block title %}
