--- a/discord_twitter_webhooks/templates/add/2_what_to_send.html
+++ b/discord_twitter_webhooks/templates/add/2_what_to_send.html
@@ -8,7 +8,8 @@
       role="switch"
       id="include_retweets"
       name="include_retweets"
-      value="False"
+      value="True"
+      {% if settings.include_retweets %}checked{% endif %}
     />
     <label class="form-check-label" for="include_retweets"
       >Include retweets</label
@@ -26,7 +27,8 @@
       role="switch"
       id="include_replies"
       name="include_replies"
-      value="False"
+      value="True"
+      {% if settings.include_replies %}checked{% endif %}
     />
     <label class="form-check-label" for="include_replies"
       >Include replies</label
