--- a/discord_twitter_webhooks/templates/add/3_how_to_send.html
+++ b/discord_twitter_webhooks/templates/add/3_how_to_send.html
@@ -1,13 +1,13 @@
 <div class="p-2 border border-dark" id="how_to_send">
   <h3>How to send</h3>
-  {# Send embed or text? #} {# Send embed #}
+  {# Send embed #}
   <div class="form-check">
     <input class="form-check-input"
            type="radio"
            name="what_to_send"
            id="send_embed"
-           value="send_embed"
-           checked />
+           {% if settings.send_embed %}checked{% endif %}
+           value="send_embed"/>
     <label class="form-check-label" for="send_embed">Send Embed?</label>
   </div>
   {# Send text #}
@@ -16,7 +16,8 @@
            type="radio"
            name="what_to_send"
            id="send_text"
-           value="send_text" />
+           {% if settings.send_text %}checked{% endif %}
+           value="send_text"/>
     <label class="form-check-label" for="send_text">Send Text?</label>
   </div>
   {# Send only link #}
@@ -25,6 +26,7 @@
            type="radio"
            name="what_to_send"
            id="send_link"
+           {% if settings.send_only_link %}checked{% endif %}
            value="send_link" />
     <label class="form-check-label" for="send_link">Send Link?</label>
   </div>
