Fix more settings

--- a/discord_twitter_webhooks/templates/add/4_embed_settings.html
+++ b/discord_twitter_webhooks/templates/add/4_embed_settings.html
@@ -123,7 +123,7 @@
       role="switch"
       id="embed_timestamp"
       name="embed_timestamp"
-      {% if settings.embed_timestamp %}value="{{ settings.embed_timestamp }}"{% endif %}
+      value="True"
       {% if settings.embed_timestamp %}checked{% endif %}
     />
     <label class="form-check-label" for="embed_timestamp">Timestamp</label>
